update python exec

--- a/programming_language/Python/精简语法练习.md
+++ b/programming_language/Python/精简语法练习.md
@@ -1,10 +1,18 @@
-
+对比变量值与地址
 
 ```python
-if a is 'a':
-    pass
-elif not 'a':
-    pass
+a = 'a'
+b = a
+if a == 'aa':
+    print(1)
+elif a != 'a':
+    print(2)
+
+
+if a is b:
+    print(1)
+elif a is not b:
+    print(2)
 ```
 
 
@@ -42,7 +50,7 @@ print(is_list[0:4])
 遍历列表和字典
 
 ```python
-for x in range[1, 5]:
+for x in range(1, 5):
     print(x, end = " ")
     
 system = {"linux": "CentOS 7", "windows": "Windows home 10"}
