--- a/programming_language/Python/精简语法练习.md
+++ b/programming_language/Python/精简语法练习.md
@@ -1,4 +1,8 @@
-对比变量值与地址
+[TOC]
+
+
+
+#### 对比变量值与地址
 
 ```python
 a = 'a'
@@ -17,7 +21,7 @@ elif a is not b:
 
 
 
-
+#### 异常处理
 
 ```python
 try:
@@ -29,7 +33,7 @@ except Exception:
 
 
 
-切片
+#### 切片
 
 ```python
 is_list = [1, 342, 223, "India", "Fedora"]
@@ -47,7 +51,7 @@ print(is_list[0:4])
 
 
 
-遍历列表和字典
+#### 遍历列表和字典
 
 ```python
 for x in range(1, 5):
@@ -71,7 +75,7 @@ for x, y in zip(a, b):
 
 
 
-循环
+#### 循环
 
 ```python
 while True:
@@ -86,7 +90,7 @@ print("Goodbye!")
 
 
 
-浅拷贝、深拷贝
+#### 浅拷贝、深拷贝
 
 ```python
 """
@@ -117,7 +121,7 @@ print("de_name - %s" % de_name)
 
 
 
-变量作用域和函数
+#### 变量作用域和函数
 
 ```python
 a = "not number"
@@ -185,7 +189,7 @@ None
 
 
 
-类与对象
+#### 类与对象
 
 ```python
 class man():
